# djp_experimental

./: README.md  pyproject.toml
djp/: __init__.py  hookspecs.py  lib.py
djp/management/commands/: showpluginsdir.py
djp/templatetags/: djp.py
tests/: test_django_plugins.py
tests/plugins/: auth_password_validators.py  authentication_backends.py  builtins.py  context_processors.py  databases.py  loaders.py  page_body_includes.py  page_head_includes.py  staticfiles_dirs.py  staticfiles_finders.py  template_includes.py
tests/test_project/: settings.py  urls.py  views.py
tests/test_project/from_plugin/: context_processors.py  loaders.py
tests/test_project/from_plugin/templatetags/: my_plugin_tags.py
tests/test_project/templates/: index.html
