[project]
name = "djp_experimental"
version = "0.0.1"
description = "A plugin system for Django forked from https://github.com/simonw/djp."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Simon Willison"},{name = "Lusayo Nyondo"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Framework :: Django",
]
dependencies = [
    "django",
    "pluggy",
    "django-unfold",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/simonw/djp"
Changelog = "https://github.com/simonw/djp/releases"
Issues = "https://github.com/simonw/djp/issues"
CI = "https://github.com/simonw/djp/actions"


[project.optional-dependencies]
test = ["pytest", "pytest-django", "pytest-env", "pytest-asyncio", "httpx"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_project.settings"
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"

[tool.pytest_env]
DJP_PLUGINS_DIR = "tests/plugins"
